objects/cwbtool__FieldAnalysis__c.object
<CustomObject>
    <fields>
        <fullName>cwbtool__IsCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCustom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cwbtool__Is_Required_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cwbtool__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__LatestModifiedDate__c</fullName>
        <label>Latest Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cwbtool__Latest_Created_Date__c</fullName>
        <label>Latest Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cwbtool__Latest_Record_Id__c</fullName>
        <label>Latest Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__MetaDataModifiedDate__c</fullName>
        <label>MetaData Modified Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__MetaData_Created_Date__c</fullName>
        <label>MetaData Created Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__ObjectAnalysis__c</fullName>
        <label>ObjectAnalysis</label>
        <referenceTo>cwbtool__FieldTrack__c</referenceTo>
        <relationshipLabel>Field Analysis</relationshipLabel>
        <relationshipName>Field_Analysises</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>cwbtool__Object__c</fullName>
        <formula>cwbtool__ObjectAnalysis__r.cwbtool__ObjectName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__PopulatedOn2__c</fullName>
        <formula>IF(cwbtool__PopulatedOnPercent__c&gt;100,100,cwbtool__PopulatedOnPercent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PopulatedOn (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cwbtool__PopulatedOnPercent__c</fullName>
        <formula>if( cwbtool__ObjectAnalysis__r.cwbtool__Records__c &gt;0, (  cwbtool__PopulatedOn__c  *100)/  cwbtool__ObjectAnalysis__r.cwbtool__Records__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PopulatedOn (%) deprecated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cwbtool__PopulatedOn__c</fullName>
        <label>Populated On</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cwbtool__Record_Created_By__c</fullName>
        <label>Record Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__View_Record__c</fullName>
        <formula>if(cwbtool__Latest_Record_Id__c!=null &amp;&amp; cwbtool__Latest_Record_Id__c!=&apos;&apos;,HYPERLINK(&quot;/&quot;+ cwbtool__Latest_Record_Id__c , &quot;View Record&quot;, &quot;_blank&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Record</label>
        <type>Text</type>
    </fields>
    <label>Field Analysis</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Analysis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>